--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,10 @@
             android:name=".GameSettings"
             android:label="@string/title_activity_game_settings" >
         </activity>
+        <activity
+            android:name=".GameScreen"
+            android:label="@string/title_activity_game_screen" >
+        </activity>
     </application>
 
 </manifest>
