--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.eecs481.tilematch" >
+    <uses-permission android:name="android.permission.STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -9,7 +11,9 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".MenuScreen"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:configChanges="keyboardHidden|orientation|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -18,24 +22,34 @@
         </activity>
         <activity
             android:name=".MediumGame"
-            android:label="@string/title_activity_medium_game" >
+            android:label="@string/title_activity_medium_game"
+            android:screenOrientation="portrait"
+            android:configChanges="keyboardHidden|orientation|screenSize" >
         </activity>
         <activity
             android:name=".GameSettings"
-            android:label="@string/title_activity_game_settings" >
+            android:label="@string/title_activity_game_settings"
+            android:screenOrientation="portrait"
+            android:configChanges="keyboardHidden|orientation|screenSize" >
         </activity>
         <activity
             android:name=".GameScreen"
-            android:label="@string/title_activity_game_screen" >
+            android:label="@string/title_activity_game_screen"
+            android:screenOrientation="portrait"
+            android:configChanges="keyboardHidden|orientation|screenSize" >
         </activity>
         <activity
             android:name=".EasyGame"
-            android:label="@string/title_activity_easy_game" >
+            android:label="@string/title_activity_easy_game"
+            android:screenOrientation="portrait"
+            android:configChanges="keyboardHidden|orientation|screenSize" >
         </activity>
         <activity
             android:name=".HardGame"
             android:label="@string/title_activity_hard_game"
-            android:parentActivityName=".GameScreen" >
+            android:parentActivityName=".GameScreen"
+            android:screenOrientation="portrait"
+            android:configChanges="keyboardHidden|orientation|screenSize" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.eecs481.tilematch.GameScreen" />
