--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.eecs481.tilematch" >
+
     <uses-permission android:name="android.permission.STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
@@ -11,9 +12,9 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".MenuScreen"
+            android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/app_name"
-            android:screenOrientation="portrait"
-            android:configChanges="keyboardHidden|orientation|screenSize">
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -22,37 +23,43 @@
         </activity>
         <activity
             android:name=".MediumGame"
+            android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/title_activity_medium_game"
-            android:screenOrientation="portrait"
-            android:configChanges="keyboardHidden|orientation|screenSize" >
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name=".GameSettings"
+            android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/title_activity_game_settings"
-            android:screenOrientation="portrait"
-            android:configChanges="keyboardHidden|orientation|screenSize" >
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name=".GameScreen"
+            android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/title_activity_game_screen"
-            android:screenOrientation="portrait"
-            android:configChanges="keyboardHidden|orientation|screenSize" >
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name=".EasyGame"
+            android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/title_activity_easy_game"
-            android:screenOrientation="portrait"
-            android:configChanges="keyboardHidden|orientation|screenSize" >
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name=".HardGame"
+            android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/title_activity_hard_game"
             android:parentActivityName=".GameScreen"
-            android:screenOrientation="portrait"
-            android:configChanges="keyboardHidden|orientation|screenSize" >
+            android:screenOrientation="portrait" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.eecs481.tilematch.GameScreen" />
+        </activity>
+        <activity
+            android:name=".PictureList"
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:label="@string/title_activity_picture_list"
+            android:screenOrientation="portrait" >
         </activity>
     </application>
 
